syntax = "proto3";

option go_package = ".;pbdevices";

package pbmessage;

message Device {
    string DeviceType = 1;
	string Address = 2;
}

message ResposiblesByDeviceID{
    repeated int32 ResponsibleID = 1;
    int32 DeviceID = 2;
}

message GetResponsibleResp {
    repeated ResposiblesByDeviceID ResposiblesByDeviceID = 1;
}

